--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -46,10 +46,10 @@
                     <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="/devopsportfolio/images/etl.png"
+                <p><img src="/devopsportfolio/images/azureetl.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -72,10 +72,40 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="/devopsportfolio/images/policy.png"
+                <p><img src="/devopsportfolio/images/azureonboard.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+            </section>
+            <section>
+                <h3><b>Automated AWS Onboarding System with SNS Notifications</b></h3>
+                <p>
+                    Designed and developed a robust and scalable automated onboarding system for new AWS accounts,
+                    leveraging various AWS services to streamline the process and enhance efficiency. The system
+                    incorporates AWS CDK for rapid deployment, AWS Lambda for seamless integration and business logic
+                    execution, DynamoDB for account updates, S3 for analysis reports, and SNS for user notifications.
+                    The project achieved remarkable results, including a 95% reduction in onboarding time and a 99%
+                    reduction in errors compared to the previous manual approach.
+                </p>
+                <p>
+                    <a href="https://github.com/lyoh001/AWSOnboard"><b>View
+                            Github</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazon-aws" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws_lambda-161B22?logo=awslambda" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws_apigateway-161B22?logo=amazonapigateway"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws_dynamodb-161B22?logo=amazondynamodb"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws_s3-161B22?logo=amazons3" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p><img src="/devopsportfolio/images/awsonboard.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -98,10 +128,10 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="/devopsportfolio/images/monitor.png"
+                <p><img src="/devopsportfolio/images/azuremonitor.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
@@ -125,10 +155,10 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="/devopsportfolio/images/rbac.png"
+                <p><img src="/devopsportfolio/images/azurerbac.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
@@ -151,10 +181,10 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="/devopsportfolio/images/bill.png"
+                <p><img src="/devopsportfolio/images/azurebill.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
@@ -181,11 +211,11 @@
                             src="https://img.shields.io/badge/microsoftsharepoint-161B22?logo=microsoftsharepoint"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
 
                 </p>
-                <p><img src="/devopsportfolio/images/gofex.png"
+                <p><img src="/devopsportfolio/images/azuregofex.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -208,28 +238,26 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
 
                 </p>
-                <p><img src="/devopsportfolio/images/lms.png"
+                <p><img src="/devopsportfolio/images/azurelms.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
-                <h3><b>Infrastructure as Code with Azure Bicep and AWS CDK</b></h3>
+                <h3><b>Infrastructure as Code</b></h3>
                 <p>
-                    Accelerated a rapid deployment to Azure and AWS using Infrastructure as Code with Github actions
+                    Accelerated a rapid deployment to cloud using Infrastructure as Code with Github actions
                     CICD pipeline.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureBicep"><b>View Azure Bicep</b></a>, <a
-                        href="https://github.com/lyoh001/AWSCdk"><b>View AWS CDK</b></a>
+                    <a href="https://github.com/lyoh001/AzureBicep"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazon-aws" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
             </section>
