--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -248,7 +248,7 @@
             <section>
                 <h3><b>Infrastructure as Code</b></h3>
                 <p>
-                    Accelerated a rapid deployment to cloud using Infrastructure as Code with Github actions
+                    Accelerated a rapid deployment to the cloud using Infrastructure as Code with Github actions
                     CICD pipeline.
                 </p>
                 <p>
