--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -31,6 +31,12 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
@@ -45,9 +51,6 @@
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
                 </p>
                 <p><img src="/devopsportfolio/images/azureetl.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -67,12 +70,15 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/devopsportfolio/images/azureonboard.png"
@@ -94,6 +100,12 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazon-aws" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/aws_lambda-161B22?logo=awslambda" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/aws_apigateway-161B22?logo=amazonapigateway"
@@ -101,9 +113,6 @@
                     <a href="#"><img src="https://img.shields.io/badge/aws_dynamodb-161B22?logo=amazondynamodb"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/aws_s3-161B22?logo=amazons3" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
                 </p>
                 <p><img src="/devopsportfolio/images/awsonboard.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -123,12 +132,15 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/devopsportfolio/images/azuremonitor.png"
@@ -150,12 +162,15 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/devopsportfolio/images/azurerbac.png"
@@ -176,12 +191,15 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/devopsportfolio/images/azurebill.png"
@@ -203,6 +221,12 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
@@ -210,10 +234,6 @@
                     <a href="#"><img
                             src="https://img.shields.io/badge/microsoftsharepoint-161B22?logo=microsoftsharepoint"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
-
                 </p>
                 <p><img src="/devopsportfolio/images/azuregofex.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -232,15 +252,17 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
-
                 </p>
                 <p><img src="/devopsportfolio/images/azurelms.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -258,6 +280,9 @@
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
                             alt="" /></a>
                 </p>
             </section>
