--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -30,6 +30,9 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
@@ -53,6 +56,9 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
@@ -63,7 +69,7 @@
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/mlportfolio/images/lstm.png"
@@ -84,12 +90,15 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/opencv-161B22?logo=opencv" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -113,6 +122,9 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
@@ -123,7 +135,7 @@
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/mlportfolio/images/ann.png"
@@ -143,9 +155,12 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/mlportfolio/images/stable_diffusion.png"
@@ -168,6 +183,9 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
@@ -178,7 +196,7 @@
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/mlportfolio/images/swa.png"
@@ -197,6 +215,9 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
@@ -212,7 +233,7 @@
                     <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
                 <p><img src="/mlportfolio/images/etl.png"
@@ -233,12 +254,15 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
             </section>
