--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View
-                            Github</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                            GitHub</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -66,7 +66,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureOnboard"><b>View
-                            Github</b></a>
+                            GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -96,7 +96,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AWSOnboard"><b>View
-                            Github</b></a>
+                            GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -128,7 +128,7 @@
                     costs by 10%.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureMonitor"><b>View Github</b></a>
+                    <a href="https://github.com/lyoh001/AzureMonitor"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -158,7 +158,7 @@
                     operational costs by 5%.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureRBAC"><b>View Github</b></a>
+                    <a href="https://github.com/lyoh001/AzureRBAC"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -187,7 +187,7 @@
                     solution also provided valuable insights for identifying and addressing any data-related issues.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureBill"><b>View Github</b></a>
+                    <a href="https://github.com/lyoh001/AzureBill"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -217,7 +217,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureGoFex"><b>View
-                            Github</b></a>
+                            GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -248,7 +248,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureLMS"><b>View
-                            Github</b></a>
+                            GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
