--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -151,7 +151,7 @@
                 <h3><b>Streamlining RBAC Security Management in Azure</b></h3>
                 <p>
                     Designed and developed an automated RBAC management workflow for extracting Role-Based Access
-                    Control (RBAC) reports across 100+ Azure subscriptions, replacing the manual approach. Leveraged
+                    Control (RBAC) reports across over 100 Azure subscriptions, replacing the manual approach. Leveraged
                     Azure Automation and built-in RBAC functionality to streamline the process. Achieved significant
                     improvements in RBAC management, including a 90% reduction in report extraction time and a 95%
                     reduction in errors. These enhancements resulted in improved security, compliance, and reduced
