--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -18,7 +18,7 @@
             <section>
                 <h3><b>NLP: A Speech Detection</b></h3>
                 <p>
-                    Developed a hate speech detection system using NLP, which involved preprocessing using Regex, NLTK,
+                    Developed a speech detection system using NLP, which involved preprocessing using Regex, NLTK,
                     Gensim, and SpaCy. The data was aggregated and visualized using Pandas, Matplotlib, and Word Cloud
                     to compile a professional report. The words were tokenized using BoW, TF-IDF, and GloVe, and the
                     model was fine-tuned using LSTM, Bidirectional LSTM, and BERT.
